BS-14438 As Dave, I want to be able to automatically check mandatory attributes when generating contract input from Business Data